put in ng-cloak to stop flicker and also added link back to the home page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,3 +6,7 @@
 this is where css goes
 
 */
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
